--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -11,7 +11,7 @@
 
     <title>Hello, world!</title>
   </head>
-  <body class="text-center">
+  <body class="d-flex align-items-center justify-content-center vh-100">
     {% block content %}
     {% endblock %}
     <!-- Optional JavaScript -->
