--- a/flaskr/templates/signin.html
+++ b/flaskr/templates/signin.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form class="form-signin">
-    <h1>Please sign in</h1>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required autofocus>
+<form method="POST" class="form-signin">
+    <h1 class="mb-2">Please sign in</h1>
+    <input type="text" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
+    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+    <button class="btn btn-lg btn-primary btn-block mt-4" type="submit">Sign in</button>
 </form>
 {% endblock %}
