stats for timer

--- a/flaskr/templates/timer.html
+++ b/flaskr/templates/timer.html
@@ -1,6 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-	<h2 id="timer">00.000</h2>
+  <div class="d-flex justify-content-center align-items-center vh-100">
+		<h2 id="timer">00.000</h2>
+	</div>
+
+	<div class="position-fixed bottom-0 start-0 m-3">
+		<p>best: <strong id="best-text">--</strong></p>
+		<p>ao5: <strong id="ao5-text">--</strong></p>
+		<p>ao12: <strong id="ao12-text">--</strong></p>
+	</div>
+
+
+
 	<script src="static/timer.js"></script>
 {% endblock %}
