--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -12,6 +12,25 @@
     <title>Hello, world!</title>
   </head>
   <body>
+
+		{% with messages = get_flashed_messages(with_categories=True) %}
+		{% if messages %}
+			{% for category, message in messages %}
+				{% if category == "error" %}
+					<div class="alert alert-danger alert-dismissible fade show" role="alert">
+						{{message}}
+						<button type="button" class="btn-close" data-dismiss="alert"></button>
+					</div>
+				{% else %}
+					<div class="alert alert-success alert-dismissible fade show" role="alert">
+						{{message}}
+						<button type="button" class="btn-close" data-dismiss="alert"></button>
+					</div>
+				{% endif %}
+			{% endfor %}
+		{% endif %}
+		{% endwith %}
+
     {% block content %}
     {% endblock %}
     <!-- Optional JavaScript -->
