--- a/flaskr/templates/login.html
+++ b/flaskr/templates/login.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form method="POST" class="form-login">
-    <h1 class="mb-2">Please log in</h1>
-    <input type="text" id="username" class="form-control" placeholder="Username" required autofocus>
-    <input type="password" id="password" class="form-control" placeholder="Password" required>
-    <button class="btn btn-lg btn-primary btn-block mt-4" type="submit">Sign in</button>
-</form>
+<div class="d-flex justify-content-center align-items-center vh-100">
+	<form method="POST" class="form-login">
+			<h1 class="mb-2">Please log in</h1>
+			<input type="email" id="email" name="email" class="form-control" placeholder="Email Address" required autofocus>
+			<input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
+			<button class="btn btn-lg btn-primary btn-block mt-4" type="submit">Sign in</button>
+	</form>
+</div>
 {% endblock %}
