general ui fixes and time table

--- a/flaskr/templates/login.html
+++ b/flaskr/templates/login.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 <div class="d-flex justify-content-center align-items-center vh-100">
-	<form method="POST" class="form-login">
-			<h1 class="mb-2">Please log in</h1>
+	<form method="POST" class="form-login text-center">
+			<h1 class="mb-2">Log in</h1>
 			<input type="email" id="email" name="email" class="form-control" placeholder="Email Address" required autofocus>
 			<input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
-			<button class="btn btn-lg btn-primary btn-block mt-4" type="submit">Sign in</button>
+			<button class="btn btn-lg btn-primary btn-block mt-4" type="submit">Log in</button>
 	</form>
 </div>
 {% endblock %}
