--- a/flaskr/templates/signup.html
+++ b/flaskr/templates/signup.html
@@ -4,7 +4,7 @@
 	<div class="d-flex justify-content-center align-items-center vh-100">
 		<form method="POST" class="form-signup text-center">
 				<h1 class="mb-2">Sign up</h1>
-				<input type="text" id="username" name="username" class="form-control" placeholder="Username"  required autofocus>
+				<input type="text" id="username" name="username" class="form-control" placeholder="Username"  required>
 				<input type="email" id="email" name="email" class="form-control" placeholder="Email" required>
 				<input type="password" id="password1" name="password1" class="form-control" placeholder="Password" required>
 				<input type="password" id="password2" name="password2" class="form-control" placeholder="Confirm password" required>
