--- a/flaskr/templates/timer.html
+++ b/flaskr/templates/timer.html
@@ -11,6 +11,20 @@
 		<p>ao12: <strong id="ao12-text">--</strong></p>
 	</div>
 
+	<div class="position-fixed bottom-0 end-0 m-3 overflow-auto timetable-wrapper">
+		<table class="table table-sm" id="timer-table">
+			<thead>
+				<tr>
+					<th scope="col">#</th>
+					<th scope="col">Time</th>
+				</tr>
+			</thead>
+
+			<tbody>
+				<tr></tr>
+			</tbody>
+		</table>
+	</div>
 
 
 	<script src="static/timer.js"></script>
