--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -9,7 +9,7 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 		<link rel="stylesheet" href="static/styles.css">
 
-		<title>Hello, world!</title>
+		<title>Cube timer</title>
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg fixed-top">
@@ -18,10 +18,17 @@
 					<a class="navbar-brand" href="/timer">Cube timer</a>
 				</div>
 
-				<div class="d-flex align-items-center">
-					<a class="nav-link" href="/login">Log In</a>
-					<a class="nav-link ms-4" href="/signup">Sign Up</a>
-				</div>
+				{% if user.is_authenticated %}
+					<div class="d-flex align-items-center">
+					<a class="nav-link ms-4" href="/timer">{{user.username}}</a>
+					</div>
+					
+				{% else %}
+					<div class="d-flex align-items-center">
+						<a class="nav-link" href="/login">Log In</a>
+						<a class="nav-link ms-4" href="/signup">Sign Up</a>
+					</div>
+				{% endif %}
 			</div>
 		</nav>
 
