removed scrollbar from times-table

--- a/flaskr/templates/timer.html
+++ b/flaskr/templates/timer.html
@@ -13,7 +13,7 @@
 
 	<div class="position-fixed bottom-0 end-0 m-3 overflow-auto timetable-wrapper">
 		<table class="table table-sm" id="timer-table">
-			<thead>
+			<thead class="sticky-top">
 				<tr>
 					<th scope="col">#</th>
 					<th scope="col">Time</th>
