--- a/flaskr/templates/timer.html
+++ b/flaskr/templates/timer.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <div class="d-flex justify-content-center align-items-center vh-100">
+  <div class="d-flex justify-content-center align-items-center vw-100 vh-100">
 		<h2 id="timer">00.000</h2>
 	</div>
 
