--- a/flaskr/templates/timer.html
+++ b/flaskr/templates/timer.html
@@ -12,7 +12,7 @@
 	</div>
 
 	<div class="position-fixed bottom-0 end-0 m-3 overflow-auto timetable-wrapper">
-		<table class="table table-sm" id="timer-table">
+		<table class="table table-sm">
 			<thead class="sticky-top">
 				<tr>
 					<th scope="col">#</th>
@@ -20,7 +20,7 @@
 				</tr>
 			</thead>
 
-			<tbody>
+			<tbody id="time-table-body">
 				<tr></tr>
 			</tbody>
 		</table>
