nicer signup and login pages

--- a/flaskr/static/styles.css
+++ b/flaskr/static/styles.css
@@ -7,6 +7,11 @@ p {
 	line-height: 0.5;
 }
 
+.form-control {
+	margin-top: 1.5rem;
+	margin-bottom: 1.5rem;
+}
+
 .timetable-wrapper {
 	max-height: 30vh;
 	scrollbar-width: none;
