--- a/flaskr/templates/timer.html
+++ b/flaskr/templates/timer.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <div class="d-flex justify-content-center align-items-center vw-100 vh-100 bg-body position-fixed" id="timer-background">
-		<h2 id="timer">00.000</h2>
+  <div class="d-flex justify-content-center align-items-center vw-100 vh-100 position-fixed" id="timer-background">
+		<h2 id="timer" class="position-fixed z-1">00.000</h2>
+		<div class="position-absolute z-0 w-100 h-100 bg-body fade" id="fading-bg"></div>
 	</div>
 
 	<div class="position-fixed bottom-0 start-0 m-3">
