--- a/flaskr/static/styles.css
+++ b/flaskr/static/styles.css
@@ -7,6 +7,11 @@ p {
 	line-height: 0.5;
 }
 
+.form-container {
+	width: 500px;
+	margin: 1.5rem;
+}
+
 .form-control {
 	margin-top: 1.5rem;
 	margin-bottom: 1.5rem;
