--- a/flaskr/templates/login.html
+++ b/flaskr/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="d-flex justify-content-center align-items-center vh-100">
-	<div class="shadow-lg p-4 rounded-4 mb-5">
+	<div class="shadow-lg p-4 rounded-4 mb-5 form-container">
 		<form method="POST" class="form-login text-center">
 			<h1 class="m-5">Login</h1>
 			<input type="email" id="email" name="email" class="form-control" placeholder="Email Address" required>
