--- a/flaskr/templates/signup.html
+++ b/flaskr/templates/signup.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 	<div class="d-flex justify-content-center align-items-center vh-100">
-		<div class="shadow-lg p-4 rounded-4 mb-5">
+		<div class="shadow-lg p-4 rounded-4 mb-5 form-container">
 			<form method="POST" class="form-signup text-center">
 				<h1 class="m-5">Sign up</h1>
 				<input type="text" id="username" name="username" class="form-control" placeholder="Username"  required>
