shadow on navbar

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -12,7 +12,7 @@
 		<title>Cube timer</title>
 	</head>
 	<body>
-		<nav class="fixed-top navbar navbar-expand-lg z-1">
+		<nav class="fixed-top navbar navbar-expand-lg shadow-sm z-1">
 			<div class="container-fluid px-0 mx-3">
 				<div class="d-flex align-items-center">
 					<a class="navbar-brand" href="/timer">Cube timer</a>
