added class for element-container

--- a/flaskr/templates/timer.html
+++ b/flaskr/templates/timer.html
@@ -6,13 +6,13 @@
 		<div class="position-absolute z-0 w-100 h-100 bg-body fade" id="fading-bg"></div>
 	</div>
 
-	<div class="position-fixed bottom-0 start-0 m-3">
+	<div class="element-container bottom-0 start-0 m-3">
 		<p>best: <strong id="best-text">--</strong></p>
 		<p>ao5: <strong id="ao5-text">--</strong></p>
 		<p>ao12: <strong id="ao12-text">--</strong></p>
 	</div>
 
-	<div class="position-fixed bottom-0 end-0 m-3 overflow-auto timetable-wrapper">
+	<div class="element-container bottom-0 end-0 m-3 overflow-auto timetable-wrapper">
 		<table class="table table-sm">
 			<thead class="sticky-top">
 				<tr>
