--- a/flaskr/static/styles.css
+++ b/flaskr/static/styles.css
@@ -4,7 +4,15 @@ body {
 }
 
 p {
-	line-height: 0.5;
+	margin: 0;
+}
+
+.element-container {
+	position: fixed;
+	/* box-shadow: var(--bs-box-shadow-lg); */
+	/* border-radius: var(--bs-border-radius-lg); */
+	/* border: var(--bs-border-width) var(--bs-border-style) var(--bs-secondary-border-subtle); */
+	/* padding: 1rem; */
 }
 
 .alert {
