--- a/flaskr/templates/timer.html
+++ b/flaskr/templates/timer.html
@@ -43,8 +43,7 @@
 					<h1 class="time-heading">1.00</h1>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-					<button type="button" class="btn btn-primary">Save changes</button>
+					<button type="button" class="btn btn-danger" id="delete-time-btn"data-bs-dismiss="modal">Delete</button>
 				</div>
 			</div>
 		</div>
