date and time on popup

--- a/flaskr/templates/timer.html
+++ b/flaskr/templates/timer.html
@@ -39,8 +39,12 @@
 					<h1 class="modal-title fs-5">Modal title</h1>
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
-				<div class="modal-body">
-					<h1 class="time-heading">1.00</h1>
+				<div class="modal-body d-flex align-items-center">
+					<h1 class="time-heading flex-grow-1">1.00</h1>
+					<div class="text-center">
+						<p class="date-text"></p>
+						<p class="time-text"></p>
+					</div>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-danger" id="delete-time-btn"data-bs-dismiss="modal">Delete</button>
