layout of modal improved

--- a/flaskr/templates/timer.html
+++ b/flaskr/templates/timer.html
@@ -41,12 +41,12 @@
 				</div>
 				<div class="modal-body d-flex align-items-center">
 					<h1 class="time-heading flex-grow-1">1.00</h1>
-					<div class="text-center">
+				</div>
+				<div class="modal-footer d-flex">
+					<div class="flex-grow-1">
 						<p class="date-text"></p>
 						<p class="time-text"></p>
 					</div>
-				</div>
-				<div class="modal-footer">
 					<button type="button" class="btn btn-danger" id="delete-time-btn"data-bs-dismiss="modal">Delete</button>
 				</div>
 			</div>
