--- a/flaskr/templates/timer.html
+++ b/flaskr/templates/timer.html
@@ -44,8 +44,8 @@
 				</div>
 				<div class="modal-footer d-flex">
 					<div class="flex-grow-1">
-						<p class="date-text"></p>
-						<p class="time-text"></p>
+						<p class="date-text fs-7"></p>
+						<p class="time-text fs-7"></p>
 					</div>
 					<button type="button" class="btn btn-danger" id="delete-time-btn"data-bs-dismiss="modal">Delete</button>
 				</div>
