--- a/flaskr/templates/timer.html
+++ b/flaskr/templates/timer.html
@@ -12,8 +12,16 @@
 			<p>ao5: <strong id="ao5-text">--</strong></p>
 			<p>ao12: <strong id="ao12-text">--</strong></p>
 		</div>
+		<div class="dropup">
+			<p class="d-inline">session:</p>
+			<strong id="session-text" type="button" class="dropdown-toggle" data-bs-toggle="dropdown">3x3</strong>
+			<ul class="dropdown-menu" id="session-dropdown">
+			</ul>
+		</div>
 
-		<p>session: <strong id="session-text">3x3</strong></p>
+
+
+
 		<div class="overflow-auto timetable-wrapper">
 			<table class="table table-sm table-hover">
 				<thead class="sticky-top">
