time dropdown width is properly adjusted

--- a/flaskr/templates/timer.html
+++ b/flaskr/templates/timer.html
@@ -15,12 +15,9 @@
 		<div class="dropup">
 			<p class="d-inline">session:</p>
 			<strong id="session-text" type="button" class="dropdown-toggle" data-bs-toggle="dropdown">3x3</strong>
-			<ul class="dropdown-menu" id="session-dropdown">
+			<ul class="dropdown-menu no-min-width" id="session-dropdown">
 			</ul>
 		</div>
-
-
-
 
 		<div class="overflow-auto timetable-wrapper">
 			<table class="table table-sm table-hover">
@@ -30,7 +27,6 @@
 						<th scope="col">Time</th>
 					</tr>
 				</thead>
-
 				<tbody id="time-table-body">
 					<tr>
 					</tr>
@@ -38,10 +34,6 @@
 			</table>
 		</div>
 	</div>
-
-
-
-
 
 	<!-- Modal -->
 	<div class="modal fade" id="time-info-modal" tabindex="-1">
