--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -8,7 +8,7 @@
 		<!-- Bootstrap CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 		<link rel="stylesheet" href="static/styles.css">
-
+		<link rel="icon" href="{{ url_for('static', filename='favicon.png') }}">
 		<title>Cube timer</title>
 	</head>
 	<body>
