--- a/flaskr/templates/timer.html
+++ b/flaskr/templates/timer.html
@@ -6,13 +6,13 @@
 		<div class="position-absolute z-0 w-100 h-100 bg-body fade" id="fading-bg"></div>
 	</div>
 
-	<div class="position-fixed bottom-0 start-0">
+	<div class="element-container bottom-0 start-0">
 		<p>best: <strong id="best-text">--</strong></p>
 		<p>ao5: <strong id="ao5-text">--</strong></p>
 		<p>ao12: <strong id="ao12-text">--</strong></p>
 	</div>
 
-	<div class="position-fixed d-flex bottom-0 vw-100 justify-content-center">
+	<div class="element-container d-flex bottom-0 vw-100 justify-content-center">
 		<div class="dropup">
 			<p class="d-inline">session:</p>
 			<strong id="session-text" type="button" class="dropdown-toggle" data-bs-toggle="dropdown">3x3</strong>
@@ -21,8 +21,8 @@
 		</div>
 	</div>
 
-	<div class="position-fixed bottom-0 end-0 overflow-auto timetable-wrapper">
-		<table class="table table-sm table-hover">
+	<div class="element-container bottom-0 end-0 overflow-auto timetable-wrapper">
+		<table class="table table-sm table-hover m-0">
 			<thead class="sticky-top">
 				<tr>
 					<th scope="col">#</th>
